# PySimpfun

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
auth/: login.py
info/: __init__.py  announcement.py  info.py
instances/: ins_list.py
pysimpfun/auth/: __init__.py
pysimpfun/info/: __init__.py  info.py
pysimpfun/instances/: __init__.py
