[project]
name = "pysimpfun"
version = "0.2.0"
description = "Simpfun sdk by Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "toml>=0.10.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pysimpfun*"]